--- a/it.html
+++ b/it.html
@@ -9,6 +9,20 @@
       content="Portfolio di Yeleen: progetti, competenze, CV e contatti."
     />
     <link rel="stylesheet" href="css/style.css" />
+    <a class="lang" href="index.html" lang="fr" aria-label="Passer en français"
+      >FR</a
+    >
+    <a class="lang" href="en.html" lang="en" aria-label="Switch to English"
+      >EN</a
+    >
+    <a
+      class="lang"
+      href="it.html"
+      lang="it"
+      aria-label="Passa all’italiano"
+      aria-current="page"
+      >IT</a
+    >
   </head>
 
   <body>
@@ -57,14 +71,6 @@
             lang="en"
             aria-label="Switch to English"
             >EN</a
-          >
-          <a
-            class="lang"
-            href="it.html"
-            lang="it"
-            aria-label="Passa all’italiano"
-            aria-current="page"
-            >IT</a
           >
         </nav>
       </div>
@@ -271,7 +277,7 @@
               <figure class="netflix__item" tabindex="0" data-tech="frontend">
                 <video
                   class="netflix__video"
-                  src="assets/videos/quizz-demo.mp4"
+                  src="assets/video/quizz-demo.mp4"
                   muted
                   autoplay
                   loop
@@ -295,7 +301,7 @@
               <figure class="netflix__item" tabindex="0" data-tech="laravel">
                 <video
                   class="netflix__video"
-                  src="assets/videos/cinehub.mp4"
+                  src="assets/video/cinehub.mp4"
                   muted
                   autoplay
                   loop
@@ -319,7 +325,7 @@
               <figure class="netflix__item" tabindex="0" data-tech="laravel">
                 <video
                   class="netflix__video"
-                  src="assets/videos/app-web-laravel.mp4"
+                  src="assets/video/app-web-laravel.mp4"
                   muted
                   autoplay
                   loop
