--- a/en.html
+++ b/en.html
@@ -9,6 +9,20 @@
       content="Yeleen's portfolio: projects, skills, CV and contact."
     />
     <link rel="stylesheet" href="css/style.css" />
+    <a class="lang" href="index.html" lang="fr" aria-label="Passer en français"
+      >FR</a
+    >
+    <a
+      class="lang"
+      href="en.html"
+      lang="en"
+      aria-label="Switch to English"
+      aria-current="page"
+      >EN</a
+    >
+    <a class="lang" href="it.html" lang="it" aria-label="Passa all’italiano"
+      >IT</a
+    >
   </head>
 
   <body>
@@ -50,14 +64,6 @@
             lang="fr"
             aria-label="Passer en français"
             >FR</a
-          >
-          <a
-            class="lang"
-            href="en.html"
-            lang="en"
-            aria-label="Switch to English"
-            aria-current="page"
-            >EN</a
           >
           <a
             class="lang"
@@ -263,7 +269,7 @@
               <figure class="netflix__item" tabindex="0" data-tech="frontend">
                 <video
                   class="netflix__video"
-                  src="assets/videos/quizz-demo.mp4"
+                  src="assets/video/quizz-demo.mp4"
                   muted
                   autoplay
                   loop
@@ -287,7 +293,7 @@
               <figure class="netflix__item" tabindex="0" data-tech="laravel">
                 <video
                   class="netflix__video"
-                  src="assets/videos/cinehub.mp4"
+                  src="assets/video/cinehub.mp4"
                   muted
                   autoplay
                   loop
@@ -311,7 +317,7 @@
               <figure class="netflix__item" tabindex="0" data-tech="laravel">
                 <video
                   class="netflix__video"
-                  src="assets/videos/app-web-laravel.mp4"
+                  src="assets/video/app-web-laravel.mp4"
                   muted
                   autoplay
                   loop
