--- a/it.html
+++ b/it.html
@@ -349,7 +349,6 @@
           </div>
         </div>
       </section>
-
       <!-- SKILLS -->
       <section id="skills" class="section section--dark reveal">
         <div class="container container--wide">
@@ -358,15 +357,104 @@
           <div class="grid3">
             <div class="panel">
               <h3>Frontend</h3>
-              <!-- unchanged skill bars -->
+
+              <div class="skill-row">
+                <div class="skill-line" style="--w: 90%">
+                  <div class="skill-line__top">
+                    <span>HTML semantico</span><span>90%</span>
+                  </div>
+                  <div class="skill-meter"><i></i></div>
+                </div>
+
+                <div class="skill-line" style="--w: 85%">
+                  <div class="skill-line__top">
+                    <span>CSS responsive</span><span>85%</span>
+                  </div>
+                  <div class="skill-meter"><i></i></div>
+                </div>
+
+                <div class="skill-line" style="--w: 80%">
+                  <div class="skill-line__top">
+                    <span>JavaScript (DOM, eventi)</span><span>80%</span>
+                  </div>
+                  <div class="skill-meter"><i></i></div>
+                </div>
+
+                <div class="skill-line" style="--w: 75%">
+                  <div class="skill-line__top">
+                    <span>Accessibilità / UX</span><span>75%</span>
+                  </div>
+                  <div class="skill-meter"><i></i></div>
+                </div>
+              </div>
             </div>
 
             <div class="panel">
               <h3>Backend</h3>
+
+              <div class="skill-row">
+                <div class="skill-line" style="--w: 85%">
+                  <div class="skill-line__top">
+                    <span>PHP</span><span>85%</span>
+                  </div>
+                  <div class="skill-meter"><i></i></div>
+                </div>
+
+                <div class="skill-line" style="--w: 80%">
+                  <div class="skill-line__top">
+                    <span>Laravel (MVC)</span><span>80%</span>
+                  </div>
+                  <div class="skill-meter"><i></i></div>
+                </div>
+
+                <div class="skill-line" style="--w: 80%">
+                  <div class="skill-line__top">
+                    <span>Blade</span><span>80%</span>
+                  </div>
+                  <div class="skill-meter"><i></i></div>
+                </div>
+
+                <div class="skill-line" style="--w: 70%">
+                  <div class="skill-line__top">
+                    <span>SQLite</span><span>70%</span>
+                  </div>
+                  <div class="skill-meter"><i></i></div>
+                </div>
+              </div>
             </div>
 
             <div class="panel">
               <h3>Strumenti</h3>
+
+              <div class="skill-row">
+                <div class="skill-line" style="--w: 80%">
+                  <div class="skill-line__top">
+                    <span>Git / GitHub</span><span>80%</span>
+                  </div>
+                  <div class="skill-meter"><i></i></div>
+                </div>
+
+                <div class="skill-line" style="--w: 75%">
+                  <div class="skill-line__top">
+                    <span>VS Code</span><span>75%</span>
+                  </div>
+                  <div class="skill-meter"><i></i></div>
+                </div>
+
+                <div class="skill-line" style="--w: 70%">
+                  <div class="skill-line__top">
+                    <span>DevTools</span><span>70%</span>
+                  </div>
+                  <div class="skill-meter"><i></i></div>
+                </div>
+
+                <div class="skill-line" style="--w: 70%">
+                  <div class="skill-line__top">
+                    <span>GitHub Pages</span><span>70%</span>
+                  </div>
+                  <div class="skill-meter"><i></i></div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
